--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -9,10 +9,12 @@ body {
 /*  background: -webkit-radial-gradient(#2b1339, #380c77);
   background: radial-gradient(#2b1339, #380c77);  */
   background-image: linear-gradient(to bottom right, #2b1339, #380c77,  #5805a9);
+  padding-bottom: 150px;
 }
 
 body.landing {
   background: #5B5579;
+  padding-bottom: 0;
 }
 
 .hero-content {
@@ -225,3 +227,42 @@ td.song-number {
    height: 70px;
    text-align: center;
  }
+.player-bar {
+   position: fixed;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   height: 150px;
+   background: rgba(255, 255, 255, 0.3);
+   z-index: 100;
+ }
+ 
+ 
+ .player-bar a, .player-bar a:hover {
+   color: white;
+   cursor: pointer;
+   text-decoration: none;
+ }
+ 
+ 
+ .player-bar .container {
+   display: table;
+   padding: 0;
+   min-height: 100%;
+ }
+ 
+ .player-bar-control-group {
+   display: table-cell;
+   vertical-align: middle;
+ }
+ 
+ .player-bar .left-controls {
+   width: 25%;
+   text-align: left;
+ }
+ 
+ .player-bar .right-controls {
+   width: 25%;
+   text-align: right;
+ }
+  
