Added html for player bar

--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -227,6 +227,8 @@ td.song-number {
    height: 70px;
    text-align: center;
  }
+ 
+ /* added to handle player bar ckpt 31  */
 .player-bar {
    position: fixed;
    bottom: 0;
@@ -381,4 +383,3 @@ td.song-number {
    width: 100px;
    vertical-align: middle;
  }
- 
