--- a/public/templates/player_bar.html
+++ b/public/templates/player_bar.html
@@ -10,6 +10,7 @@
        </a>
        <a class='next' ng-click="songPlayer.next()">
          <i class='fa fa-forward'></i>
+         <!-- i class='fa fa-forward' ng-show="currentSong"></i  --><!-- This hides the next button on load, but doesn't cause it to show once play is clicked  -->
        </a>
      </div>
      <div class='currently-playing player-bar-control-group'>
