--- a/app/assets/templates/collection.html
+++ b/app/assets/templates/collection.html
@@ -8,7 +8,8 @@
         <div class="collection-album-image-overlay" ng-show="showOverlay">
         <!-- div class="collection-album-image-overlay" ng-hide="showOverlay"  -->
           <div class="collection-overlay-content">
-            <a class="collection-overlay-button" ui-sref="album">
+//            <a class="collection-overlay-button" ui-sref="album">
+            <a class="collection-overlay-button" ng-click="playAlbum(album)">
               <i class="fa fa-play"></i>
             </a>
             &nbsp;
