--- a/app/stylesheets/_player_bar.scss
+++ b/app/stylesheets/_player_bar.scss
@@ -143,13 +143,14 @@
       transition: all 100ms ease-in-out;
     }
 
-    &.no-animate {
+    &.no-animate,
+    &:active {
       .fill, .thumb {
         transition: none;
       }
     }
 
-    &:hover .thumb {
+    &:hover .thumb, &:active .thumb {
       width: 20px;
       height: 20px;
       margin-top: -10px;
