--- a/app/assets/templates/player_bar.html
+++ b/app/assets/templates/player_bar.html
@@ -10,17 +10,13 @@
             </a>
             <a class='next' ng-click="songPlayer.next()">
                 <i class='fa fa-forward'></i>
-                <!-- i class='fa fa-forward' ng-show="currentSong"></i  -->  <!-- This hides the next button on load, but doesn't cause it to show once play is clicked ?!  -->
+                <!-- i class='fa fa-forward' ng-show="SongPlayer.currentSong"></i  -->
             </a>
         </div>
         <div class='currently-playing player-bar-control-group'>
             <h2 class='song-name'>{{ songPlayer.currentSong.name }}</h2>
             <div class='seek-control'>
-                <!--  div class='seek-bar'>
-                    <div class='fill'></div>
-                    <div class='thumb'></div>
-                </div  -->                          <!-- replace with element directive, slider  -->
-                <slider value='{{playTime}}' max='{{songPlayer.currentSong.length}}'></slider>
+                <slider value='{{playTime}}' max='{{songPlayer.currentSong.length}}' on-change='songPlayer.seek(value)'></slider>
                 <div class='current-time'>{{ songPlayer.playTime }}</div>
                 <div class='total-time'>{{ songPlayer.currentSong.length }}</div>
             </div>
@@ -29,10 +25,6 @@
         <div class='right-controls player-bar-control-group'>
             <div class='volume' >
                 <i class='fa fa-volume-up'></i>
-                <!--  div class='seek-bar'>
-                    <div class='fill'></div>
-                    <div class='thumb'></div>
-                </div  -->                         <!-- replace with element directive, slider  -->
                 <slider></slider>
             </div>
             <div class='queue-toggle'>
