--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -229,9 +229,9 @@ td.song-number {
     border-radius: 50%;
     cursor: pointer;
     transition: all 100ms ease-in-out; }
-  .seek-bar.no-animate .fill, .seek-bar.no-animate .thumb, .slider.no-animate .fill, .slider.no-animate .thumb {
+  .seek-bar.no-animate .fill, .seek-bar.no-animate .thumb, .seek-bar:active .fill, .seek-bar:active .thumb, .slider.no-animate .fill, .slider.no-animate .thumb, .slider:active .fill, .slider:active .thumb {
     transition: none; }
-  .seek-bar:hover .thumb, .slider:hover .thumb {
+  .seek-bar:hover .thumb, .seek-bar:active .thumb, .slider:hover .thumb, .slider:active .thumb {
     width: 20px;
     height: 20px;
     margin-top: -10px;
