--- a/app/assets/templates/player_bar.html
+++ b/app/assets/templates/player_bar.html
@@ -24,7 +24,7 @@
         </div>
         <div class='right-controls player-bar-control-group'>
             <div class='volume' >
-                <i class='fa fa-volume-up'></i>
+                <i class='fa' ng-class='volumeClass()'></i>
                 <slider value='{{songPlayer.volume}}' max='100' on-change='songPlayer.setVolume(value)'></slider>
             </div>
             <div class='queue-toggle'>
