--- a/public/templates/player_bar.html
+++ b/public/templates/player_bar.html
@@ -24,8 +24,8 @@
         </div>
         <div class='right-controls player-bar-control-group'>
             <div class='volume' >
-                <i class='fa fa-volume-up'></i>
-                <slider></slider>
+                <i class='fa' ng-class='volumeClass()' ng-click='songPlayer.iconMute()'></i>
+                <slider value='{{songPlayer.volume}}' max='100' on-change='songPlayer.setVolume(value)'></slider>
             </div>
             <div class='queue-toggle'>
                 <a>
