--- a/app/assets/templates/landing.html
+++ b/app/assets/templates/landing.html
@@ -1,7 +1,7 @@
 
  <div class='hero-content'> <!-- Hero content -->
    <div class='container'>
-     <h1> Bloc Jams </h1>
+     <h1> CC Jukebox </h1>
      <h3 ng_click="subTextClicked()"> {{ subText }} </h3>
    </div>
  </div>
@@ -10,7 +10,7 @@
    <div class='row'>
      <div class='point col-md-4'>
        <h5> Choose your music </h5>
-       <p> The world is full of music, why should you have to listen to music that someone else chose? </p>
+       <p> The world is full of music, why should you have to listen to music that you have to pay for? </p>
      </div>
      <div class='point col-md-4'>
        <h5> Unlimited, streaming, ad-free </h5>
