--- a/app/assets/templates/collection.html
+++ b/app/assets/templates/collection.html
@@ -3,12 +3,10 @@
     <div ng-repeat="album in albums" class="collection-album-container col-md-2">
 
       <div ng-mouseenter="showOverlay = true" ng-mouseleave="showOverlay = false" class="collection-album-image-container">
-      <!-- div ng-mouseenter="showOverlay = false" ng-mouseleave="showOverlay = true" class="collection-album-image-container"  --> <!-- use ng-hide instead of ng-show -->
         <img ng-src="{{ album.albumArtUrl }}">
         <div class="collection-album-image-overlay" ng-show="showOverlay">
-        <!-- div class="collection-album-image-overlay" ng-hide="showOverlay"  -->
           <div class="collection-overlay-content">
-//            <a class="collection-overlay-button" ui-sref="album">
+            <!--  a class="collection-overlay-button" ui-sref="album"  -->
             <a class="collection-overlay-button" ng-click="playAlbum(album)">
               <i class="fa fa-play"></i>
             </a>
