added img-responsive class to pix

--- a/app/assets/templates/album.html
+++ b/app/assets/templates/album.html
@@ -1,7 +1,7 @@
 <div class='album-container container'>
   <div class='album-header-container row'> <!-- Album Header -->
     <div class='col-md-6'> <!-- Album Image -->
-      <img ng-src="{{ album.albumArtUrl }}" />
+      <img ng-src="{{ album.albumArtUrl }}" class="img-responsive" />
     </div>
 
     <div class='album-header-information col-md-5 col-md-push-1'> <!-- Album Information -->
