--- a/public/templates/collection.html
+++ b/public/templates/collection.html
@@ -3,7 +3,7 @@
     <div ng-repeat="album in albums" class="collection-album-container col-md-2">
 
       <div ng-mouseenter="showOverlay = true" ng-mouseleave="showOverlay = false" class="collection-album-image-container">
-        <img ng-src="{{ album.albumArtUrl }}">
+        <img ng-src="{{ album.albumArtUrl }}" class="img-responsive">
         <div class="collection-album-image-overlay" ng-show="showOverlay">
           <div class="collection-overlay-content">
             <!--  a class="collection-overlay-button" ui-sref="album"  -->
