--- a/app/assets/templates/player_bar.html
+++ b/app/assets/templates/player_bar.html
@@ -1,19 +1,21 @@
 <div ng-controller="PlayerBar.controller" class='player-bar'>
     <div class='container'>
-        <div class='play-controls player-bar-control-group left-controls'>
-            <a class='previous hidden-xs' ng-click="songPlayer.previous()">
-                <i class='fa fa-backward'></i>
-            </a>
-            <a class='play-pause'>
-                <i class='fa fa-play' ng-show="!songPlayer.playing" ng-click="songPlayer.play()"></i>
-                <i class='fa fa-pause' ng-show="songPlayer.playing" ng-click="songPlayer.pause()"></i>
-            </a>
-            <a class='next hidden-xs' ng-click="songPlayer.next()">
-                <i class='fa fa-forward'></i>
-                <!-- i class='fa fa-forward' ng-show="SongPlayer.currentSong"></i  -->
-            </a>
-        </div>
-        <div class='currently-playing player-bar-control-group'>
+             <div class="row">
+       <div class='play-controls player-bar-control-group left-controls col-md-4'>
+                <a class='previous' ng-click="songPlayer.previous()">
+                    <i class='fa fa-backward'></i>
+                </a>
+                <a class='play-pause'>
+                    <i class='fa fa-play' ng-show="!songPlayer.playing" ng-click="songPlayer.play()"></i>
+                    <i class='fa fa-pause' ng-show="songPlayer.playing" ng-click="songPlayer.pause()"></i>
+                </a>
+                <a class='next' ng-click="songPlayer.next()">
+                    <i class='fa fa-forward'></i>
+                    <!-- i class='fa fa-forward' ng-show="SongPlayer.currentSong"></i  -->
+                </a>
+            </div>
+
+        <div class='currently-playing player-bar-control-group col-md-6'>
             <h2 class='song-name'>{{ songPlayer.currentSong.name }}</h2>
             <div class='seek-control'>
                 <slider value='{{playTime}}' max='{{songPlayer.currentSong.length}}' on-change='songPlayer.seek(value)'></slider>
@@ -22,16 +24,17 @@
             </div>
             <h3 class='artist-name'>{{ songPlayer.currentAlbum.artist }}</h3>
         </div>
-        <div class='right-controls player-bar-control-group'>
-            <div class='volume' >
-                <i class='fa' ng-class='volumeClass()' ng-click='songPlayer.iconMute()'></i>
-                <slider value='{{songPlayer.volume}}' max='100' on-change='songPlayer.setVolume(value)'></slider>
-            </div>
-            <div class='queue-toggle'>
-                <a>
-                    <i class='fa fa-list-ul'></i>
-                </a>
-            </div>
+        <div class='right-controls player-bar-control-group col-md-2 hidden-xs'>
+                <div class='volume hidden-xs' >
+                    <i class='fa' ng-class='volumeClass()' ng-click='songPlayer.iconMute()'></i>
+                    <slider value='{{songPlayer.volume}}' max='100' on-change='songPlayer.setVolume(value)'></slider>
+                </div>
+                <!-- div class='queue-toggle'>
+                    <a>
+                        <i class='fa fa-list-ul'></i>
+                    </a>
+                </div  -->
+                </div>
         </div>
     </div>
 </div>
