--- a/public/templates/landing.html
+++ b/public/templates/landing.html
@@ -24,7 +24,7 @@
    </div>
  </div>
 
- <div class="landing-album-list container">
+ <div class="landing-album-list container"  ontouchstart="this.classList.toggle('hover');">
    <div class="row">
      <div class="col-md-4" ng-repeat="albumURL in albumURLs">
        <img  ng-src="{{albumURL}}" class="img-responsive">
