--- a/app/assets/templates/landing.html
+++ b/app/assets/templates/landing.html
@@ -24,10 +24,19 @@
    </div>
  </div>
 
- <div class="landing-album-list container"  ontouchstart="this.classList.toggle('hover');">
-   <div class="row">
-     <div class="col-md-4" ng-repeat="albumURL in albumURLs">
-       <img  ng-src="{{albumURL}}" class="img-responsive">
-     </div>
-   </div>
- </div>
+<div class="landing-album-list container">
+    <div class="row" data-ng-repeat="row in albumURLs">
+        <div  class="col-md-4" data-ng-repeat="albumURL in row">
+            <div class="flip-container">
+                <div class="flipper">
+                    <div class="front">
+                        <img  ng-src="{{albumURL}}">
+                    </div>
+                    <div class="back">
+                        <h2 class="album-back-cover"> Double Sextet / 2x5</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
