--- a/public/templates/landing.html
+++ b/public/templates/landing.html
@@ -27,8 +27,8 @@
 <div class="landing-album-list container">
     <div class="row" data-ng-repeat="row in albumURLs">
         <div  class="col-md-4" data-ng-repeat="albumURL in row">
-            <div class="flip-container" ng-click="this.classList.toggle('hover'); this.classList.toggle('focus')" onclick=””>
-                <div class="flipper" onclick="">
+            <div class="flip-container" ng-mouseenter="this.classList.toggle('hover'); this.classList.toggle('focus')" ng-mouseleave="this.classList.toggle('hover'); this.classList.toggle('focus')">
+                <div class="flipper">
                     <div class="front">
                         <img  ng-src="{{albumURL}}">
                     </div>
