--- a/app/assets/templates/landing.html
+++ b/app/assets/templates/landing.html
@@ -28,7 +28,7 @@
     <div class="row" data-ng-repeat="row in albumURLs">
         <div  class="col-md-4" data-ng-repeat="albumURL in row">
             <div class="flip-container" >
-                <div class="flipper" ng-mouseenter="this.classList.toggle('focus');" ng-mouseleave="this.classList.toggle('focus');">
+                <div class="flipper" ng-mouseenter="this.classList.toggle('hover'); this.classList.toggle('focus');" ng-mouseleave="this.classList.toggle('hover'); this.classList.toggle('focus');">
                     <div class="front">
                         <img  ng-src="{{albumURL}}">
                     </div>
