add active toggle

--- a/app/assets/templates/landing.html
+++ b/app/assets/templates/landing.html
@@ -28,7 +28,7 @@
     <div class="row" data-ng-repeat="row in albumURLs">
         <div  class="col-md-4" data-ng-repeat="albumURL in row">
             <div class="flip-container">
-                <div class="flipper" onclick="this.classList.toggle('hover'); this.classList.toggle('focus');">
+                <div class="flipper" onclick="this.classList.toggle('hover'); this.classList.toggle('focus'); this.classList.toggle('active');">
                     <div class="front">
                         <img  ng-src="{{albumURL}}">
                     </div>
