moved back to flip-container

--- a/app/assets/templates/landing.html
+++ b/app/assets/templates/landing.html
@@ -27,8 +27,8 @@
 <div class="landing-album-list container">
     <div class="row" data-ng-repeat="row in albumURLs">
         <div  class="col-md-4" data-ng-repeat="albumURL in row">
-            <div class="flip-container">
-                <div class="flipper" onclick="this.classList.toggle('hover'); this.classList.toggle('focus'); this.classList.toggle('active');">
+            <div class="flip-container" onclick="this.classList.toggle('hover'); this.classList.toggle('focus'); this.classList.toggle('active');">
+                <div class="flipper">
                     <div class="front">
                         <img  ng-src="{{albumURL}}">
                     </div>
