--- a/app/assets/templates/landing.html
+++ b/app/assets/templates/landing.html
@@ -27,7 +27,7 @@
 <div class="landing-album-list container">
     <div class="row" data-ng-repeat="row in albumURLs">
         <div  class="col-md-4" data-ng-repeat="albumURL in row">
-            <a href="javascript:void(0)"><div class="flip-container" onclick="this.classList.toggle('hover'); this.classList.toggle('focus'); this.classList.toggle('active');">
+            <div class="flip-container" ontouchstart="this.classList.toggle('hover'); this.classList.toggle('focus'); this.classList.toggle('active');">
                 <div class="flipper">
                     <div class="front">
                         <img  ng-src="{{albumURL}}">
@@ -35,8 +35,8 @@
                     <div class="back">
                         <h2 class="album-back-cover"> Double Sextet / 2x5</h2>
                     </div>
-                </div></div>
-            </a>
+                </div>
+              </div>
         </div>
     </div>
 </div>
