--- a/app/assets/templates/landing.html
+++ b/app/assets/templates/landing.html
@@ -27,7 +27,7 @@
 <div class="landing-album-list container">
     <div class="row" data-ng-repeat="row in albumURLs">
         <div  class="col-md-4" data-ng-repeat="albumURL in row">
-            <div class="flipcontainer" ng-class="{flipcontainer: hover}" ng-mouseenter="hover = true" ng-mouseleave="hover = false;">
+            <div class="flipcontainer" ng-class="{flipper: hover}" ng-mouseenter="hover = true" ng-mouseleave="hover = false;">
             <!--  div class="flipcontainer" ng-mouseover="this.classList.toggle('hover'); this.classList.toggle('focus'); this.classList.toggle('active');"  -->
                 <div class="flipper">
                     <div class="front">
